--- a/mse/local_static/scss/components/_home.scss
+++ b/mse/local_static/scss/components/_home.scss
@@ -6,14 +6,6 @@
 	text-align: center;
 }
 
-.home-banner--left {
-	text-align: left;
-}
-
-.home-banner--right {
-	text-align: right;
-}
-
 .home-banner--image {
 	margin-bottom: $base-spacing;
 }
@@ -61,6 +53,14 @@
 	  text-decoration: underline;
 	  transition: color $base-duration $base-timing;
 	}
+}
+
+.banner-text-left {
+	text-align: left;
+}
+
+.banner-text-right {
+	text-align: right;
 }
 
 .featured {
